--- a/Experience.html
+++ b/Experience.html
@@ -23,7 +23,7 @@
         <nav class="navbar">
             <div class="logo">DataSci <span>Portfolio</span></div>
             <ul class="nav-links">
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Projects.html">Projects</a></li>
