--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
         <nav class="navbar">
             <div class="logo">DataSci <span>Portfolio</span></div>
             <ul class="nav-links">
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="about.html#about">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
