--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
-                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
@@ -187,4 +187,5 @@
     <!-- JS file -->
     <script src="assets/js/chat.js"></script>
 </body>
+
 </html>
