--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="Skills.html">Skills</a></li>
-                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -112,3 +112,4 @@
     <script src="assets/js/chat.js"></script>
 </body>
 </html>
+
