--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -150,3 +150,4 @@
     <script src="assets/js/chat.js"></script>
 </body>
 </html>
+
