--- a/Skills.html
+++ b/Skills.html
@@ -25,7 +25,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="skills.html">Skills</a></li>
+                <li><a href="Skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -150,4 +150,5 @@
     <script src="assets/js/chat.js"></script>
 </body>
 </html>
+
 
