--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <li><a href="Skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="Experience.html">Experience</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -189,3 +189,4 @@
 </body>
 
 </html>
+
